# notifycord

./: README.md  pyproject.toml
notifycord/: notifycord.py  sample.ipynb
